--- a/styles.css
+++ b/styles.css
@@ -116,7 +116,7 @@ footer {
     border-radius: 5px;
     font-size: 1.2em;
     font-weight: bold;
-    color: #333;
+    color: #64403E;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 ul {
