--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ body {
         "menu footer sidebar"
         "menu bottom bottom";
     gap: 0;
-    
+
     height: 100vh;
 }
 header {
@@ -104,7 +104,7 @@ footer {
 }
 .bottom {
     grid-area: bottom;
-    background-color: #64403E;
+    background-color: #6C6061;
     padding: 15px;
     display: flex;
     justify-content: flex-end;
