--- a/styles.css
+++ b/styles.css
@@ -73,6 +73,7 @@ header .x-header:hover {
     padding: 25px;
     overflow-y: auto;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
+    text-align: justify;
 }
 .content h2 {
     margin-bottom: 15px;
